TT2-65 : fix alignment

--- a/src/routes/_Figure.scss
+++ b/src/routes/_Figure.scss
@@ -75,6 +75,9 @@ img {
 .ptext.ptext.pedestal3.schools {
   right: 21.5%;
 }
+.ptext.ptext.pedestal3.tyler-technologies {
+  right: 26%;
+}
 .hotspot {
   position: absolute;
   cursor: pointer;
@@ -149,6 +152,9 @@ img {
   }
   .ptext.ptext.pedestal3.schools {
     right: 23.5%;
+  }
+  .ptext.ptext.pedestal3.tyler-technologies {
+    right: 26.5%;
   }
 }
 @media only screen
